--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "back-end",
+  "name": "despesas",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -21,8 +21,9 @@
     "dayjs": "^1.11.6",
     "express": "^4.18.2",
     "express-async-error": "^0.0.2",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.8.0",
+    "swagger-ui-express": "^5.0.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
@@ -31,6 +32,7 @@
     "@types/express": "^4.17.14",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.11.9",
+    "@types/swagger-ui-express": "^4.1.6",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "dotenv": "^16.0.3",
     "eslint": "^8.27.0",
