--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "tsc",
     "test": "vitest",
+    "coverage": "vitest run --coverage",
     "dev": "tsnd --exit-child --inspect=4321 src/server.ts",
     "dev:w": "tsnd --exit-child --respawn --watch src --inspect=4321 src/server.ts"
   },
@@ -34,6 +35,7 @@
     "@types/node": "^18.11.9",
     "@types/swagger-ui-express": "^4.1.6",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
+    "@vitest/coverage-v8": "^1.4.0",
     "dotenv": "^16.0.3",
     "eslint": "^8.27.0",
     "eslint-config-standard-with-typescript": "^23.0.0",
@@ -44,6 +46,6 @@
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.3",
-    "vitest": "^0.25.2"
+    "vitest": "1.4"
   }
 }
